Added minification to gulp bundle task.

--- a/ide/public/index.html
+++ b/ide/public/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <div id="appContainer"></div>
-<script src="js/bundle.js"></script>
+<script src="js/bundle.min.js"></script>
 </body>
 </html>
